[package]
name = "spruceid-tutorial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
didkit =  { version = "0.6.0",default-features = false, features = ["w3c", "ed25519", "rsa"] }